Fixing dark mode

--- a/week-3/css/dark-mode.css
+++ b/week-3/css/dark-mode.css
@@ -1,26 +1,3 @@
-.dark-mode {
-	background-color: #333333;
-	color: white;
-}
-
-.dark-mode > nav {
-	background-color: #333333;
-	color: white;
-	border-bottom: 2px solid white;
-}
-
-.dark-mode > nav a {
-	color: white;
-}
-
-.dark-mode .nav-logo {
-	color: #000;
-}
-
-.dark-mode #dark-mode-switch > p {
-	color: #000;
-}
-
 /* The switch - the box around the slider */
 .switch {
 	position: relative;
@@ -92,4 +69,31 @@ nav > #dark-mode-switch {
 
 nav > #dark-mode-switch > p {
 	margin-right: 8px;
+}
+
+.dark-mode {
+	background-color: #333333;
+	color: white;
+}
+
+.dark-mode > nav {
+	background-color: #333333;
+	color: white;
+	border-bottom: 2px solid white;
+}
+
+.dark-mode > nav a {
+	color: white;
+}
+
+.dark-mode .nav-logo {
+	color: #000;
+}
+
+.dark-mode #dark-mode-switch > p {
+	color: #000;
+}
+
+.dark-mode #tools-section {
+	color: #000;
 }
